--- a/cvcs-map.css
+++ b/cvcs-map.css
@@ -71,3 +71,26 @@
 #fc-legend {
 	display:none;
 }
+
+
+#sendmail {
+    width: 800px;
+    height:600px;
+	-webkit-box-shadow: 10px 10px 60px -8px rgba(0,0,0,1);
+	-moz-box-shadow: 10px 10px 60px -8px rgba(0,0,0,1);
+	box-shadow: 10px 10px 60px -8px rgba(0,0,0,1);
+    border: 1px solid gray;
+    position: fixed;
+    top: 10%;
+    left: 20%;
+    z-index: 200;
+    background-color: white;
+    opacity: 0.92;
+    padding: 10px;
+}
+
+#sendmail iframe {
+	width:100%;
+	height: 100%;
+	border: none;
+}
