--- a/cvcs-map.css
+++ b/cvcs-map.css
@@ -7,6 +7,7 @@
 	background-color: rgba(255, 255, 255, 0.8);
 	box-shadow: 3px 3px 3px #888888;
 	padding:6px 20px 20px 20px;
+	display: none;
 }
 
 .colourball {
@@ -24,8 +25,16 @@
 	margin-bottom:-15px;
 }
 
+#intact-sei:hover, #degraded-sei:hover, #lost-sei:hover {
+	cursor: pointer;
+}
+
 .legend-desc {
 	font-size: smaller;
+}
+
+.legend-sei-desc {
+	font-size: 1.2em;
 }
 
 .leaflet-control-attribution {
@@ -87,10 +96,89 @@
     background-color: white;
     opacity: 0.92;
     padding: 10px;
+    display: none;
+}
+
+#mapintro {
+    width: 800px;
+    height:400px;
+	-webkit-box-shadow: 10px 10px 60px -8px rgba(0,0,0,1);
+	-moz-box-shadow: 10px 10px 60px -8px rgba(0,0,0,1);
+	box-shadow: 10px 10px 60px -8px rgba(0,0,0,1);
+    border: 1px solid gray;
+    position: fixed;
+    top: 20%;
+    left: 20%;
+    z-index: 200;
+    background-color: white;
+    padding: 50px;
+    text-align: center;
+}
+
+#mapintro-done {
+	background-color: #357ae8;
+	background-image: -webkit-linear-gradient(top,#4d90fe,#357ae8);
+	background-image: linear-gradient(top,#4d90fe,#357ae8);
+	border: 1px solid #2f5bb7;
+	color: white;
+	text-align: center;
+	font-weight: bold;
+	cursor: pointer;
+	padding: 10px;
+	width: 140px;
+	margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+}
+
+#mapintro-close {
+	height: 25px;
+	width: 25px;
+	float: right;
+	position: relative;
+	top: -60px;
+	right: -60px;
+	cursor: pointer;
 }
 
 #sendmail iframe {
 	width:100%;
 	height: 100%;
 	border: none;
+	position: relative;
+	top: -23px;
+}
+
+#sendmail-close {
+	height: 25px;
+	width: 25px;
+	float: right;
+	position: relative;
+	top: -20px;
+	right: -20px;
+	cursor: pointer;
+}
+
+#sendmail-select {
+	width: 800px;
+    height:50px;
+    border: 1px solid gray;
+    position: fixed;
+    bottom: 0px;
+    left: 10%;
+    z-index: 200;
+    background-color: white;
+    opacity: 0.92;
+    text-align: center;
+    cursor: pointer;
+    display: none;
+}
+
+#sendmail-select h4 {
+	margin-top: 0px;
+	color: blue;
+}
+
+#sendmail-select p {
+	margin: 5px;
 }
